--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 <div ng-controller="filterCtrl">
     <h3 class="text-center">Filter project for AngularJS</h3>
     <br>
-    Search: </label><input ng-model="query">
+    <label>Search: <input ng-model="query"></label>
     <br>
     <br>
     <ul>
